# English-learning-bot-on-Reddit-generated-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING_AND_ACCEPTANCE.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  config.py
app/bot/: handlers.py  keyboards.py  main.py  messages.py
app/db/: migrate.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20260527_0001_initial.py  20260531_0002_user_learning_profiles.py
app/services/: extraction.py  ingestion.py  llm.py  processing_jobs.py  profile_generation.py  profile_prompts.py  profile_schemas.py  profiles.py  reddit.py  review.py  users.py
app/services/sources/: __init__.py  availability.py  detector.py  fetchers.py  types.py
app/utils/: json_parse.py  reddit_url.py
app/workers/: processing_loop.py
tests/: test_bot_main.py  test_database_schema.py  test_extraction.py  test_ingestion.py  test_json_parse.py  test_processing_loop.py  test_profile_generation.py  test_profiles.py  test_reddit_service.py  test_reddit_url.py  test_review.py  test_sources.py  test_telegram_services.py
